# ConwaysGame

./: CMakeLists.txt  README.md  application.cpp  application.h  cell.cpp  cell.h  gamerender.cpp  gamerender.h  gamewindow.cpp  gamewindow.h  grid.cpp  grid.h  main.cpp
